# neuroloopy

./: .dockerignore  .gitignore  Dockerfile  JUPYTER_HUB_GUIDE.md  README.md  README_REFACTOR.md  config_example.yaml  dashboard.html  dashboard.py  docker-compose.yml  instabrain_dicoms_remtrain_v3.py  jupyter_dashboard.py  jupyter_dashboard_simple.py  jupyter_dashboard_web.py  pyproject.toml  run_dashboard.py  server.js  setup.py  start_dashboard.py  test_dashboard.py
.ipynb_checkpoints/: README-checkpoint.md  start_dashboard-checkpoint.py
neuroloopy/: __init__.py  __main__.py  anal.py  cli.py  preproc.py  utils.py
neuroloopy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
neuroloopy/dashboard/: dashboard_integration.py
src/neuroloopy/: __init__.py  anal.py  cli.py  dashboard.py  preproc.py  utils.py  watcher.py
src/neuroloopy/.ipynb_checkpoints/: anal-checkpoint.py
src/neuroloopy/dashboard/: TROUBLESHOOTING.md  dashboard.html  package-lock.json  package.json  server.js  setup_dashboard.sh  simple_server_test.py
tests/: dummy_test.txt  simulate_realtime.sh
